feat: wip, allow setting default dashboard, but there is errors once done around navigation
