# webserver/src/main/java/io/kestra/webserver/controllers/api/DashboardController.java
@@ -2,6 +2,7 @@ package io.kestra.webserver.controllers.api;
 
 import io.kestra.core.models.Label;
 import io.kestra.core.models.QueryFilter;
+import io.kestra.core.models.Setting;
 import io.kestra.core.models.dashboards.Dashboard;
 import io.kestra.core.models.dashboards.DataFilter;
 import io.kestra.core.models.dashboards.DataFilterKPI;
@@ -9,12 +10,15 @@ import io.kestra.core.models.dashboards.charts.Chart;
 import io.kestra.core.models.dashboards.charts.DataChart;
 import io.kestra.core.models.dashboards.charts.DataChartKPI;
 import io.kestra.core.models.flows.Flow;
+import io.kestra.core.models.settings.DashboardSettings;
 import io.kestra.core.models.validations.ManualConstraintViolation;
 import io.kestra.core.models.validations.ModelValidator;
 import io.kestra.core.models.validations.ValidateConstraintViolation;
 import io.kestra.core.repositories.ArrayListTotal;
 import io.kestra.core.repositories.DashboardRepositoryInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
+import io.kestra.core.repositories.SettingRepositoryInterface;
+import io.kestra.core.serializers.JacksonMapper;
 import io.kestra.core.serializers.YamlParser;
 import io.kestra.core.tenant.TenantService;
 import io.kestra.plugin.core.dashboard.chart.Markdown;
@@ -70,6 +74,9 @@ public class DashboardController {
 
     @Inject
     protected TenantService tenantService;
+
+    @Inject
+    protected SettingRepositoryInterface settingRepository;
 
     @Inject
     protected ModelValidator modelValidator;
@@ -200,6 +207,20 @@ public class DashboardController {
         } else {
             return HttpResponse.status(HttpStatus.NOT_FOUND);
         }
+    }
+
+    public static final String OSS_DASHBOARD_SETTINGS = "kestra.oss.dashboard-settings";
+
+    @ExecuteOn(TaskExecutors.IO)
+    @Operation(tags = {"Dashboards"}, summary = "Get default dashboards")
+    @Get(uri = "/settings/default-dashboards")
+    public HttpResponse<DashboardSettings> getDefaultDashboards(
+    ) {
+        return settingRepository.findByKey(OSS_DASHBOARD_SETTINGS)
+            .map(Setting::getValue)
+            .map(value -> JacksonMapper.ofJson(false).convertValue(value, DashboardSettings.class))
+            .map(HttpResponse::ok)
+            .orElse(HttpResponse.ok());
     }
 
     @ExecuteOn(TaskExecutors.IO)
